RESOLVED FIXED299483
Fix font regression in showPopupMenu
https://bugs.webkit.org/show_bug.cgi?id=299483
Summary Fix font regression in showPopupMenu
Gavin
Reported 2025-09-24 13:44:30 PDT
Recent changes to showPopupMenu prevented it from correctly rendering system fonts.
Attachments
Gavin
Comment 1 2025-09-24 13:44:39 PDT
Gavin
Comment 2 2025-09-24 14:05:03 PDT
Alexey Proskuryakov
Comment 3 2025-09-24 14:42:04 PDT
*** Bug 299484 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2025-09-30 11:20:28 PDT
Committed 300763@main (f50f4cf7ee29): <https://commits.webkit.org/300763@main> Reviewed commits have been landed. Closing PR #51281 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.