REGRESSION (300337@main): Fix font regression in showPopupMenu https://bugs.webkit.org/show_bug.cgi?id=299483 rdar://161265062

Reviewed by Aditya Keerthi.

Changes CTFont creation in showPopupMenu to support
lookup of system fonts.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/FontAttributes.mm
* Source/WebKit/UIProcess/mac/WebPopupMenuProxyMac.mm:
(WebKit::WebPopupMenuProxyMac::showPopupMenu):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/FontAttributes.mm:
(TestWebKitAPI::TEST(FontAttributes, SelectTextStyle)):

Canonical link: https://commits.webkit.org/300763@main