Source/WebKit/UIProcess/mac/WebPopupMenuProxyMac.mm
@@ -33,6 +33,7 @@
 #import "PageClientImplMac.h"
 #import "PlatformPopupMenuData.h"
 #import "WebPopupItem.h"
+#import <pal/spi/cf/CoreTextSPI.h>
 #import <pal/spi/mac/NSCellSPI.h>
 #import <pal/system/mac/PopupMenu.h>
 #import <wtf/BlockObjCExceptions.h>
@@ -105,23 +106,28 @@ void WebPopupMenuProxyMac::populate(const Vector<WebPopupItem>& items, NSFont *f
 void WebPopupMenuProxyMac::showPopupMenu(const IntRect& rect, TextDirection textDirection, double pageScaleFactor, const Vector<WebPopupItem>& items, const PlatformPopupMenuData& data, int32_t selectedIndex)
 {
     ASSERT(hasProcessPrivilege(ProcessPrivilege::CanCommunicateWithWindowServer));
-    RetainPtr<NSFont> font;
+    RetainPtr<CTFontRef> font;
 
     BEGIN_BLOCK_OBJC_EXCEPTIONS
 
     auto scaledFontSize = data.pointSize * pageScaleFactor;
     
-    RetainPtr<NSFontDescriptor> descriptor = [NSFontDescriptor fontDescriptorWithName:data.postScriptName.createNSString().get() size:scaledFontSize];
-    font = [NSFont fontWithDescriptor:descriptor.get() size:scaledFontSize];
+    RetainPtr descriptor = adoptCF(CTFontDescriptorCreateWithNameAndSize(data.postScriptName.createCFString().get(), scaledFontSize));
+    RetainPtr matched = adoptCF(CTFontDescriptorCreateMatchingFontDescriptorsWithOptions(descriptor.get(), NULL, kCTFontDescriptorMatchingOptionIncludeHiddenFonts));
+
+    if (matched && CFArrayGetCount(matched.get())) {
+        RetainPtr matchedDescriptor = dynamic_cf_cast<CTFontDescriptorRef>(CFArrayGetValueAtIndex(matched.get(), 0));
+        font = adoptCF(CTFontCreateWithFontDescriptor(matchedDescriptor.get(), scaledFontSize, NULL));
+    }
 
     // font will be nil when using a custom font. However, we should still
     // honor the font size, matching other browsers.
     if (!font)
-        font = [NSFont menuFontOfSize:scaledFontSize];
+        font = bridge_cast([NSFont menuFontOfSize:scaledFontSize]);
 
     END_BLOCK_OBJC_EXCEPTIONS
 
-    populate(items, font.get(), textDirection);
+    populate(items, bridge_cast(font.get()), textDirection);
 
     [m_popup attachPopUpWithFrame:rect inView:m_webView.get().get()];
     [m_popup selectItemAtIndex:selectedIndex];
@@ -177,7 +183,7 @@ void WebPopupMenuProxyMac::showPopupMenu(const IntRect& rect, TextDirection text
     SetForScope visibleScope { m_isVisible, true };
 
     Ref<WebPopupMenuProxyMac> protect(*this);
-    PAL::popUpMenu(menu.get(), location, roundf(NSWidth(rect)), dummyView.get(), selectedIndex, font.get(), controlSize, data.hideArrows);
+    PAL::popUpMenu(menu.get(), location, roundf(NSWidth(rect)), dummyView.get(), selectedIndex, bridge_cast(font.get()), controlSize, data.hideArrows);
 
     [m_popup dismissPopUp];
     [dummyView removeFromSuperview];
