Tools/TestWebKitAPI/Tests/WebKitCocoa/FontAttributes.mm
@@ -46,6 +46,10 @@
 #import "UIKitSPIForTesting.h"
 #endif
 
+#if PLATFORM(MAC)
+#import "InstanceMethodSwizzler.h"
+#endif
+
 @interface FontTextStyleUIDelegate : NSObject <WKUIDelegatePrivate> {
 @public
     bool _willSetFont;
@@ -90,6 +94,12 @@
 }
 
 @end
+
+#if PLATFORM(MAC)
+@interface NSMenu ()
+- (id)_menuImpl;
+@end
+#endif
 
 @interface TestWKWebView (FontAttributesTesting)
 - (void)selectElementWithIdentifier:(NSString *)identifier;
@@ -477,6 +487,36 @@ TEST(FontAttributes, FontTextStyle)
 
     TestWebKitAPI::Util::run(&uiDelegate->_done);
 }
+
+#if PLATFORM(MAC)
+TEST(FontAttributes, SelectTextStyle)
+{
+    __block bool done = false;
+    auto menu = adoptNS([NSMenu new]);
+    InstanceMethodSwizzler swizzler { [[menu _menuImpl] class],
+        NSSelectorFromString(@"popUpMenu:atLocation:width:forView:withSelectedItem:withFont:withFlags:withOptions:"),
+        imp_implementationWithBlock(^(id, NSMenu *menu, NSPoint, CGFloat, NSView *, NSInteger, NSFont* font, NSUInteger, NSDictionary *) {
+            EXPECT_WK_STREQ("Helvetica", font.fontName);
+            EXPECT_EQ(32.0, font.pointSize);
+            done = true;
+    }) };
+
+    auto webView = adoptNS([[TestWKWebView alloc] initWithFrame:NSMakeRect(0, 0, 400, 400)]);
+    auto uiDelegate = adoptNS([[FontTextStyleUIDelegate alloc] init]);
+    [webView setUIDelegate:uiDelegate.get()];
+    [webView synchronouslyLoadHTMLString:@"<body>"
+        "<select style='font-family: Helvetica; font-size: 32px; background-color: white;'>"
+            "<option value='item'>styled item</option>"
+        "</select>"
+        "</body>"];
+
+    done = false;
+    [webView sendClickAtPoint:NSMakePoint(8, 375)];
+    [webView waitForNextPresentationUpdate];
+
+    TestWebKitAPI::Util::run(&done);
+}
+#endif
 
 } // namespace TestWebKitAPI
 
